# OpenGLproject2

./: .gitignore  CMakeLists.txt  OpenGLproject2.sln
OpenGLproject2/: OpenGLproject2.vcxproj  OpenGLproject2.vcxproj.filters  Shader.h  camera.h  main.cpp  shader_4_6.frag  shader_4_6.vert
include/glad/: glad.h
